kinda work with logger