@@ -1,40 +1,36 @@
 package collection;
 
+import java.util.Deque;
 import java.util.LinkedList;
-import java.util.List;
 
 
-public class  ThreadsQueue<E> {
+public class ThreadsQueue<E> {
 
-    private List<E> list = new LinkedList<>();
+    private Deque<E> queue = new LinkedList<>();
     private int capacity;
 
     public ThreadsQueue(int capacity) {
         this.capacity = capacity;
     }
 
-    public synchronized void add(E element) {
-        try {
-            while (list.size() == capacity) {
-                wait();
-            }
-            list.add(element);
-            notifyAll();
-        } catch (InterruptedException e) {
-            e.printStackTrace();
-        }
+    public boolean notEmpty () {
+        return !queue.isEmpty();
     }
 
-    public synchronized E removeFirst() {
-        try {
-            while (list.size() == 0) {
-                wait();
-            }
-        } catch (InterruptedException e) {
-            e.printStackTrace();
+    public synchronized void add(E element) throws InterruptedException {
+        while (queue.size() == capacity) {
+            wait();
+        }
+        queue.add(element);
+        notifyAll();
+    }
+
+    public synchronized E removeFirst() throws InterruptedException {
+        while (queue.size() == 0) {
+            wait();
         }
         notifyAll();
-        return list.remove(0);
+        return queue.removeFirst();
     }
 
 }
